[project]
name = "ranq"
version = "0.1.0"
description = "Quantum random bits service for RanQ"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
]

[project.optional-dependencies]
dev = ["ruff==0.8.4", "pytest==8.3.4", "pytest-cov==6.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
